{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 95,
  "lineage": "da80b87b-8380-03fc-f97a-d940afa01871",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954503069243:security-group/sg-089064c1470ff6701",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-089064c1470ff6701",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.107.160.0/24"
                ],
                "description": "within_vpc",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00cd64342bd1333f1"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Nodes on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00cd64342bd1333f1"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "testing-innovation-poc-cluster-20240605085116568700000006",
            "name_prefix": "testing-innovation-poc-cluster-",
            "owner_id": "954503069243",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "testing-innovation-poc-cluster"
            },
            "tags_all": {
              "Name": "testing-innovation-poc-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0a42726acd1d815"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954503069243:security-group/sg-00cd64342bd1333f1",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00cd64342bd1333f1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-02f6fca30a3419765"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to Nodegroup all traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-089064c1470ff6701"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-089064c1470ff6701"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-089064c1470ff6701"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-089064c1470ff6701"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-089064c1470ff6701"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-089064c1470ff6701"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-089064c1470ff6701"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node all ports/protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "testing-innovation-poc-node-20240605085116564900000005",
            "name_prefix": "testing-innovation-poc-node-",
            "owner_id": "954503069243",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "testing-innovation-poc-node",
              "kubernetes.io/cluster/testing-innovation-poc": "owned"
            },
            "tags_all": {
              "Name": "testing-innovation-poc-node",
              "kubernetes.io/cluster/testing-innovation-poc": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0a42726acd1d815"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2443972956",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-089064c1470ff6701",
            "security_group_rule_id": "sgr-0662895e0af62896a",
            "self": false,
            "source_security_group_id": "sg-00cd64342bd1333f1",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral_ports_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Nodes on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-4128953104",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-089064c1470ff6701",
            "security_group_rule_id": "sgr-090500cf16a953378",
            "self": false,
            "source_security_group_id": "sg-00cd64342bd1333f1",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "within_vpc",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.107.160.0/24"
            ],
            "description": "within_vpc",
            "from_port": 0,
            "id": "sgrule-33627823",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-089064c1470ff6701",
            "security_group_rule_id": "sgr-0e1d8a1a68de1a769",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-981254971",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00cd64342bd1333f1",
            "security_group_rule_id": "sgr-03c19f600beebb532",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2830215009",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00cd64342bd1333f1",
            "security_group_rule_id": "sgr-0ebd965880d985ece",
            "self": false,
            "source_security_group_id": "sg-089064c1470ff6701",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3398101468",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00cd64342bd1333f1",
            "security_group_rule_id": "sgr-067f420a77b196b7c",
            "self": false,
            "source_security_group_id": "sg-089064c1470ff6701",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-63475274",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00cd64342bd1333f1",
            "security_group_rule_id": "sgr-07ffa4e69805d0d86",
            "self": false,
            "source_security_group_id": "sg-089064c1470ff6701",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-278180459",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00cd64342bd1333f1",
            "security_group_rule_id": "sgr-040df9cae9410e0b9",
            "self": false,
            "source_security_group_id": "sg-089064c1470ff6701",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1949663648",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00cd64342bd1333f1",
            "security_group_rule_id": "sgr-0960cce6bf3e9b307",
            "self": false,
            "source_security_group_id": "sg-089064c1470ff6701",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2984501259",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00cd64342bd1333f1",
            "security_group_rule_id": "sgr-01f372f8e467b26bf",
            "self": false,
            "source_security_group_id": "sg-089064c1470ff6701",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_to_node_all_traffic",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to Nodegroup all traffic",
            "from_port": 0,
            "id": "sgrule-1197940280",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00cd64342bd1333f1",
            "security_group_rule_id": "sgr-040ee43f2eb72a02c",
            "self": false,
            "source_security_group_id": "sg-089064c1470ff6701",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3010425453",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00cd64342bd1333f1",
            "security_group_rule_id": "sgr-0a8cddc0e52e5e680",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node all ports/protocols",
            "from_port": 0,
            "id": "sgrule-1482660753",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00cd64342bd1333f1",
            "security_group_rule_id": "sgr-0eb4c86b4e1a4a5ef",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-518578508",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00cd64342bd1333f1",
            "security_group_rule_id": "sgr-0bf79dd06f8b64c23",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3132572323",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-00cd64342bd1333f1",
            "security_group_rule_id": "sgr-077be8c606978a8e4",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954503069243:network-acl/acl-0ddc2e6208daf03b0",
            "default_network_acl_id": "acl-0ddc2e6208daf03b0",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ddc2e6208daf03b0",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "954503069243",
            "subnet_ids": [
              "subnet-024ede0dd3b6034ab",
              "subnet-03cd3a82701e4fa10",
              "subnet-082901aa1d4027e5b",
              "subnet-096b863cc8d8331e7",
              "subnet-0e5d9aa283845e276",
              "subnet-0f1e5b323925b1ce7"
            ],
            "tags": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-default",
              "TeamName": "RnD"
            },
            "tags_all": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-default",
              "TeamName": "RnD"
            },
            "vpc_id": "vpc-0f0a42726acd1d815"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954503069243:route-table/rtb-07be61822efbd5093",
            "default_route_table_id": "rtb-07be61822efbd5093",
            "id": "rtb-07be61822efbd5093",
            "owner_id": "954503069243",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-default",
              "TeamName": "RnD"
            },
            "tags_all": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-default",
              "TeamName": "RnD"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0f0a42726acd1d815"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954503069243:security-group/sg-083ba46217fe3762a",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-083ba46217fe3762a",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "954503069243",
            "revoke_rules_on_delete": false,
            "tags": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-default",
              "TeamName": "RnD"
            },
            "tags_all": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-default",
              "TeamName": "RnD"
            },
            "vpc_id": "vpc-0f0a42726acd1d815"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0afdc81777f49b4cf",
            "association_id": "eipassoc-00ac0522b6ae7d3b7",
            "domain": "vpc",
            "id": "eipalloc-0afdc81777f49b4cf",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0505f2e86ee534107",
            "private_dns": "ip-10-107-160-151.ap-south-1.compute.internal",
            "private_ip": "10.107.160.151",
            "public_dns": "ec2-13-202-0-207.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.202.0.207",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-ap-south-1a",
              "TeamName": "RnD"
            },
            "tags_all": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-ap-south-1a",
              "TeamName": "RnD"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954503069243:internet-gateway/igw-09f9e4c98e1734ec9",
            "id": "igw-09f9e4c98e1734ec9",
            "owner_id": "954503069243",
            "tags": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc",
              "TeamName": "RnD"
            },
            "tags_all": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc",
              "TeamName": "RnD"
            },
            "vpc_id": "vpc-0f0a42726acd1d815"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0afdc81777f49b4cf",
            "association_id": "eipassoc-00ac0522b6ae7d3b7",
            "connectivity_type": "public",
            "id": "nat-0b9e3bb81e07d1505",
            "network_interface_id": "eni-0505f2e86ee534107",
            "private_ip": "10.107.160.151",
            "public_ip": "13.202.0.207",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-082901aa1d4027e5b",
            "tags": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-ap-south-1a",
              "TeamName": "RnD"
            },
            "tags_all": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-ap-south-1a",
              "TeamName": "RnD"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0def98a6a9b6188331080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b9e3bb81e07d1505",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0def98a6a9b618833",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09f9e4c98e1734ec9",
            "id": "r-rtb-09659b3f63c0010611080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09659b3f63c001061",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954503069243:route-table/rtb-03573e2a47a286df4",
            "id": "rtb-03573e2a47a286df4",
            "owner_id": "954503069243",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-db",
              "TeamName": "RnD"
            },
            "tags_all": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-db",
              "TeamName": "RnD"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0a42726acd1d815"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954503069243:route-table/rtb-0def98a6a9b618833",
            "id": "rtb-0def98a6a9b618833",
            "owner_id": "954503069243",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b9e3bb81e07d1505",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-private",
              "TeamName": "RnD"
            },
            "tags_all": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-private",
              "TeamName": "RnD"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0a42726acd1d815"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954503069243:route-table/rtb-09659b3f63c001061",
            "id": "rtb-09659b3f63c001061",
            "owner_id": "954503069243",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09f9e4c98e1734ec9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-public",
              "TeamName": "RnD"
            },
            "tags_all": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-public",
              "TeamName": "RnD"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0a42726acd1d815"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f761c07273fae9d",
            "route_table_id": "rtb-03573e2a47a286df4",
            "subnet_id": "subnet-024ede0dd3b6034ab"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01fb2157a208794b6",
            "route_table_id": "rtb-03573e2a47a286df4",
            "subnet_id": "subnet-0e5d9aa283845e276"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a114cbb378f1efa",
            "route_table_id": "rtb-0def98a6a9b618833",
            "subnet_id": "subnet-0f1e5b323925b1ce7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04dd616335b18df43",
            "route_table_id": "rtb-0def98a6a9b618833",
            "subnet_id": "subnet-03cd3a82701e4fa10"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f97295f53761ca0f",
            "route_table_id": "rtb-09659b3f63c001061",
            "subnet_id": "subnet-082901aa1d4027e5b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024d701184f005628",
            "route_table_id": "rtb-09659b3f63c001061",
            "subnet_id": "subnet-096b863cc8d8331e7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954503069243:subnet/subnet-024ede0dd3b6034ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.107.160.192/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024ede0dd3b6034ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "954503069243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-db-ap-south-1a",
              "TeamName": "RnD"
            },
            "tags_all": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-db-ap-south-1a",
              "TeamName": "RnD"
            },
            "vpc_id": "vpc-0f0a42726acd1d815"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954503069243:subnet/subnet-0e5d9aa283845e276",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.107.160.224/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5d9aa283845e276",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "954503069243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-db-ap-south-1b",
              "TeamName": "RnD"
            },
            "tags_all": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-db-ap-south-1b",
              "TeamName": "RnD"
            },
            "vpc_id": "vpc-0f0a42726acd1d815"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954503069243:subnet/subnet-0f1e5b323925b1ce7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.107.160.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1e5b323925b1ce7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "954503069243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-private-ap-south-1a",
              "TeamName": "RnD",
              "kubernetes.io/cluster/testing-innovation-poc": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-private-ap-south-1a",
              "TeamName": "RnD",
              "kubernetes.io/cluster/testing-innovation-poc": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f0a42726acd1d815"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954503069243:subnet/subnet-03cd3a82701e4fa10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.107.160.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03cd3a82701e4fa10",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "954503069243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-private-ap-south-1b",
              "TeamName": "RnD",
              "kubernetes.io/cluster/testing-innovation-poc": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-private-ap-south-1b",
              "TeamName": "RnD",
              "kubernetes.io/cluster/testing-innovation-poc": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f0a42726acd1d815"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954503069243:subnet/subnet-082901aa1d4027e5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.107.160.128/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082901aa1d4027e5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "954503069243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-public-ap-south-1a",
              "TeamName": "RnD",
              "kubernetes.io/cluster/testing-innovation-poc": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-public-ap-south-1a",
              "TeamName": "RnD",
              "kubernetes.io/cluster/testing-innovation-poc": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f0a42726acd1d815"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954503069243:subnet/subnet-096b863cc8d8331e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.107.160.160/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096b863cc8d8331e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "954503069243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-public-ap-south-1b",
              "TeamName": "RnD",
              "kubernetes.io/cluster/testing-innovation-poc": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-public-ap-south-1b",
              "TeamName": "RnD",
              "kubernetes.io/cluster/testing-innovation-poc": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f0a42726acd1d815"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954503069243:vpc/vpc-0f0a42726acd1d815",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.107.160.0/24",
            "default_network_acl_id": "acl-0ddc2e6208daf03b0",
            "default_route_table_id": "rtb-07be61822efbd5093",
            "default_security_group_id": "sg-083ba46217fe3762a",
            "dhcp_options_id": "dopt-0c00e241762a4da44",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f0a42726acd1d815",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07be61822efbd5093",
            "owner_id": "954503069243",
            "tags": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc",
              "TeamName": "RnD"
            },
            "tags_all": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc",
              "TeamName": "RnD"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}